--- a/LPApi/appsettings.json
+++ b/LPApi/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "mongodb://localhost:27017/?readPreference=primary"
+    "Default": "mongodb://localhost:27017"
   },
 
   "Database": {
