--- a/LPApi/appsettings.Development.json
+++ b/LPApi/appsettings.Development.json
@@ -1,6 +1,7 @@
 ﻿{
   "Database": {
-    "Name": "MRAuth-Stage"
+    "Name": "MRAuth-Stage",
+    "Hangfire": "MRAuthService-Stage"
   },
 
   "Logging": {
