--- a/LPApi/IdentityApi.csproj
+++ b/LPApi/IdentityApi.csproj
@@ -27,11 +27,13 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="7.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="5.0.1" />
+    <PackageReference Include="Hangfire" Version="1.6.21" />
+    <PackageReference Include="Hangfire.Mongo" Version="0.5.12" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.5" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.1.2" />
     <PackageReference Include="MRDbMongoIdentity" Version="1.0.7" />
     <PackageReference Include="Scrutor" Version="3.0.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.0" />
   </ItemGroup>
 
   <ItemGroup>
