--- a/LPApi/appsettings.json
+++ b/LPApi/appsettings.json
@@ -8,6 +8,15 @@
     "Hangfire": "MRAuthService"
   },
 
+  "Hangfire": {
+    "DashboardUrl":  "/hangfire"
+  },
+
+  "Client": {
+    "User": "http://identity_dev.madrat.studio",
+    "Admin": "http://identity_dev.madrat.studio/admin.html"
+  },
+
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
