--- a/LPApi/IdentityApi.csproj
+++ b/LPApi/IdentityApi.csproj
@@ -45,6 +45,7 @@
     <ProjectReference Include="..\Dal\Dal.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\Manager\Manager.csproj" />
+    <ProjectReference Include="..\Service\Service.csproj" />
   </ItemGroup>
 
 </Project>
