--- a/LPApi/appsettings.json
+++ b/LPApi/appsettings.json
@@ -16,6 +16,18 @@
     "User": "http://identity_dev.madrat.studio",
     "Admin": "http://identity_dev.madrat.studio/admin.html"
   },
+  "Email": {
+    "MadRatBot": {
+      "PrimaryDomain": "smtp.gmail.com",
+      "PrimaryPort": "587",
+      "SecondayDomain": "smtp.live.com",
+      "SecondaryPort": "587",
+      "UsernameEmail": "madratbot@gmail.com",
+      "UsernameDisplay": "Mad Rat Bot",
+      "UsernamePassword": "madrat_()_",
+      "FromEmail": "madratbot@gmail.com"
+    }
+  },
 
   "Logging": {
     "IncludeScopes": false,
