Added Provider roles / users control

--- a/LPApi/appsettings.json
+++ b/LPApi/appsettings.json
@@ -9,7 +9,11 @@
   },
 
   "Hangfire": {
-    "DashboardUrl":  "/hangfire"
+    "DashboardUrl": "/hangfire"
+  },
+
+  "Templates": {
+    "RelativePath":  "Templates/"
   },
 
   "Client": {
