--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -10,6 +10,7 @@
     <ProjectReference Include="..\Connector\ConnectorS3\ConnectorS3.csproj" />
     <ProjectReference Include="..\Dal\Dal.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\Tools\Tools.csproj" />
   </ItemGroup>
 
   <ItemGroup>
