--- a/LPApi/nlog.config
+++ b/LPApi/nlog.config
@@ -3,7 +3,7 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="info"
-      internalLogFile="${basedir}\logs\internal-nlog.txt">
+      internalLogFile="inner_logs\logs\internal-nlog.txt">
 
   <!-- enable asp.net core layout renderers -->
   <extensions>
