--- a/LPApi/appsettings.Development.json
+++ b/LPApi/appsettings.Development.json
@@ -1,7 +1,7 @@
 ﻿{
   "Database": {
-    "Name": "MRAuth-Stage",
-    "Hangfire": "MRAuthService-Stage"
+    "Name": "MRAuth",
+    "Hangfire": "MRAuthService"
   },
 
   "Logging": {
