--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -9,6 +9,7 @@
     <ProjectReference Include="..\Connector\CommonApi\CommonApi.csproj" />
     <ProjectReference Include="..\Connector\ConnectorS3\ConnectorS3.csproj" />
     <ProjectReference Include="..\Dal\Dal.csproj" />
+    <ProjectReference Include="..\GoogleClient\GoogleClient.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\Tools\Tools.csproj" />
   </ItemGroup>
