--- a/LPApi/appsettings.Release.json
+++ b/LPApi/appsettings.Release.json
@@ -8,7 +8,7 @@
     }
   },
   "UrlRedirect": {
-    "Root": "http://identity.madrat.studio/#"
+    "Root": "http://identity.madrat.studio"
   }
 
 
